Removing folders from index

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -10,14 +10,14 @@
 <body>
 <div class="container">
     <div class="jumbotron" style="margin-top: 50px;;">
-        <h1>Oops ! Un pokémon sauvage apparaît !</h1>
-        <h2>Ses attaques sont les suivantes :</h2>
+        <h1>Oops ! Il semblerait qu'il y ait une erreur...</h1>
+        <h2>Les internets mondiaux n'ont pas été en mesure de trouver la page que vous avez demandé...</h2>
         <p>
-            - Erreur {{ status_code }} : {{ status_text }}
+            - Missa causé peut-être une ou deux little piccoli accidente, disons boum le gaz, et carabouillis limousine big boss... alors bannis !
         </p>
-        <a class="btn btn-default btn-lg" href="{{ path('ag_lasvegasbundle_home') }}"><i class="fa fa-arrow-left"></i> Revenir à l'accueil</a>
-        <a class="btn btn-info btn-lg" href="{{ path('ag_lasvegasbundle_home') }}">S'enjailler tous ensemble</a>
-        <a class="btn btn-danger btn-lg" href="{{ path('ag_lasvegasbundle_home') }}">Désinstaller internet.exe</a>
+        <a class="btn btn-default" href="{{ path('ag_lasvegasbundle_home') }}"><i class="fa fa-arrow-left"></i> Revenir à l'accueil calmement</a>
+        <a class="btn btn-info" href="{{ path('ag_lasvegasbundle_home') }}">S'enjailler tous ensemble</a>
+        <a class="btn btn-danger" href="{{ path('ag_lasvegasbundle_home') }}">Désinstaller internet.exe</a>
     </div>
 </div>
 </body>
