--- a/src/AG/LasVegasBundle/Resources/views/Album/remove.html.twig
+++ b/src/AG/LasVegasBundle/Resources/views/Album/remove.html.twig
@@ -10,7 +10,7 @@
         <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
             <hr/>
             <p>Êtes-vous sûr de vouloir supprimer l'album "{{ album.name }}" ?</p>
-            <form action="{{ path('ag_album_remove', { 'id': album.id }) }}" method="POST">
+            <form action="" method="POST">
                 <a class="btn btn-default" href="{{ path('ag_lasvegasbundle_home') }}">
                     <span class="glyphicon glyphicon-chevron-left"></span> Retour à l'index
                 </a>
