--- a/src/AG/UserBundle/Resources/views/Profile/show.html.twig
+++ b/src/AG/UserBundle/Resources/views/Profile/show.html.twig
@@ -1,31 +1,43 @@
 {% extends 'AGUserBundle::base.html.twig' %}
 
-{% block h1_title %}<i class="fa fa-user"></i>&nbsp;{{ user.username }}{% endblock %}
+{% trans_default_domain 'FOSUserBundle' %}
+
+{% block h1_title %}<i class="fa fa-user"></i> Mon compte{% endblock %}
 
 {% block user_bundle_content  %}
-    {% trans_default_domain 'FOSUserBundle' %}
     <div class="row">
-        <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+        <hr/>
+        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+            {% for label, flashes in app.session.flashbag.all %}
+                {% for flash in flashes %}
+                    <div class="alert alert-{{ label }}">
+                        {{ 'change_password.flash.success'|trans }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
             <div class="panel panel-default">
                 <div class="panel-heading">
                     Informations personnelles
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <span class="glyphicon glyphicon-user"></span> {{ 'profile.show.username'|trans }} : {{ user.username }}
+                        <i class="fa fa-user"></i> {{ 'profile.show.username'|trans }} : {{ user.username }}
                     </li>
                     <li class="list-group-item">
-                        <span class="glyphicon glyphicon-envelope"></span> {{ 'profile.show.email'|trans }} : {{ user.email }}
+                        <i class="fa fa-envelope"></i> {{ 'profile.show.email'|trans }} : {{ user.email }}
+                    </li>
+                    <li class="list-group-item">
+                        <i class="fa fa-male"></i> Dénomination : {{ user.firstName }} {{ user.lastName }}
                     </li>
                 </ul>
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <a href="{{ path('fos_user_profile_edit') }}" class="btn btn-default">
-                        <span class="glyphicon glyphicon-edit"></span> Modifier mon compte
+                        <i class="fa fa-edit"></i> Modifier mon compte
                     </a>
                     <a href="{{ path('fos_user_change_password') }}" class="btn btn-default">
-                        <span class="glyphicon glyphicon-lock"></span> Changer mot de passe
+                        <i class="fa fa-lock"></i> Changer mot de passe
                     </a>
                 </div>
             </div>
