--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -10,14 +10,17 @@
 <body>
 <div class="container">
     <div class="jumbotron" style="margin-top: 50px;;">
-        <h1>Oops ! Un pokémon sauvage apparaît !</h1>
-        <h2>Ses attaques sont les suivantes :</h2>
+        <h1>Oops ! Missa posé problème !</h1>
+        <h2>Une grande perturbation dans la force je ressens. Du côté Obscur le voile vient de se déchirer...</h2>
         <p>
             - Erreur {{ status_code }} : {{ status_text }}
         </p>
-        <a class="btn btn-default btn-lg" href="{{ path('ag_lasvegasbundle_home') }}"><i class="fa fa-arrow-left"></i> Revenir à l'accueil</a>
-        <a class="btn btn-info btn-lg" href="{{ path('ag_lasvegasbundle_home') }}">S'enjailler tous ensemble</a>
-        <a class="btn btn-danger btn-lg" href="{{ path('ag_lasvegasbundle_home') }}">Désinstaller internet.exe</a>
+        <p>
+            Missa accepté... Avec maximax d'humilité...
+        </p>
+        <a class="btn btn-default" href="{{ path('ag_lasvegasbundle_home') }}"><i class="fa fa-arrow-left"></i> Revenir à l'accueil calmement</a>
+        <a class="btn btn-info" href="{{ path('ag_lasvegasbundle_home') }}">S'enjailler tous ensemble</a>
+        <a class="btn btn-danger" href="{{ path('ag_lasvegasbundle_home') }}">Désinstaller internet.exe</a>
     </div>
 </div>
 </body>
