--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,19 +4,36 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Las Vegas Trip{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        {% block stylesheets %}{% endblock %}
-        <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+            {#<link rel="stylesheet" href="{{ asset('cdn/bootstrap.min.css') }}"/>#}
+            {#<link rel="stylesheet" href="{{ asset('cdn/font-awesome.min.css') }}"/>#}
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
+            <link rel="stylesheet" href="{{ asset('css/upload.css') }}"/>
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-63562526-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
+        {% block navbar %}{% endblock %}
         <div class="container">
             {% block body %}{% endblock %}
         </div>
         <footer>Copyright @ Antoine Gaillot</footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        {#<script src="{{ asset('cdn/jquery-1.11.1.min.js') }}"></script>#}
+        {#<script src="{{ asset('cdn/bootstrap.min.js') }}"></script>#}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
