--- a/src/AG/LasVegasBundle/Resources/views/Album/edit.html.twig
+++ b/src/AG/LasVegasBundle/Resources/views/Album/edit.html.twig
@@ -3,7 +3,7 @@
 {% block lasvegasbundle_body %}
     <div class="row">
         <div class="col-xs-12 text-center">
-            <h1><i class="fa fa-camera-retro"></i> <em>{{ album.name }}</em> <small>Editer</small></h1>
+            <h1><i class="fa fa-folder-open"></i> <em>{{ album.name }}</em> <small>Editer</small></h1>
         </div>
     </div>
     <div class="row">
