--- a/src/AG/LasVegasBundle/Resources/views/Album/form.html.twig
+++ b/src/AG/LasVegasBundle/Resources/views/Album/form.html.twig
@@ -1,19 +1,22 @@
-{{ form_start(form) }}
+{#{{ form_start(form) }}#}
 
-{{ form_errors(form) }}
+{#{{ form_errors(form) }}#}
 
-<div class="form-group">
-    {{ form_label(form.name) }}
-    {{ form_widget(form.name, { 'attr': { 'class': 'form-control '}}) }}
-</div>
+{#<div class="form-group">#}
+    {#{{ form_label(form.name) }}#}
+    {#{{ form_widget(form.name, { 'attr': { 'class': 'form-control '}}) }}#}
+{#</div>#}
 
-<div class="form-group">
-    {{ form_label(form.description) }}
-    {{ form_widget(form.description, { 'attr': { 'class': 'form-control '}}) }}
-</div>
+{#<div class="form-group">#}
+    {#{{ form_label(form.description) }}#}
+    {#{{ form_widget(form.description, { 'attr': { 'class': 'form-control '}}) }}#}
+{#</div>#}
 
-<div class="form-group">
-    {{ form_widget(form.save, { 'attr': { 'class': 'btn btn-success' }}) }}
-</div>
+{#<div class="form-group">#}
+    {#{{ form_widget(form.save, { 'attr': { 'class': 'btn btn-success' }}) }}#}
+{#</div>#}
 
-{{ form_rest(form) }}
+{#{{ form_rest(form) }}#}
+
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
+{{ form(form) }}
