--- a/src/AG/LasVegasBundle/Resources/views/Album/index.html.twig
+++ b/src/AG/LasVegasBundle/Resources/views/Album/index.html.twig
@@ -12,14 +12,18 @@
         <div class="col-md-10 col-md-offset-1">
             <div class="row">
                 {% for album in listAlbums %}
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="panel panel-default">
+                <div class="col-xs-12 col-sm-6 col-md-4 album_thumbnail">
+                    <div class="panel{% if app.user == album.author %} panel-success{% else %} panel-default{% endif %}">
                         <div class="panel-heading">
-                            <a href="{{ path('ag_album_show', { 'id': album.id }) }}"><i class="fa fa-camera-retro"></i> {{ album.name }}</a>
-                            {% if is_granted('ROLE_ADMIN') and app.user == album.author %}
-                                <div class="pull-right">
+                            <a class="album_title" href="{{ path('ag_album_show', { 'id': album.id }) }}">
+                                {{ album.name }}
+                            </a>
+                            {% if app.user == album.author %}
+                                <div class="pull-right album_monitoring">
                                     <a class="btn btn-success btn-xs"
-                                       href="{{ path('ag_album_upload', { 'id': album.id }) }}"><i class="fa fa-plus"></i></a>
+                                       href="{{ path('ag_album_upload', { 'id': album.id }) }}">
+                                        <i class="fa fa-plus"></i>
+                                    </a>
                                     <a class="btn btn-warning btn-xs" href="{{ path('ag_album_edit', { 'id': album.id }) }}">
                                         <i class="fa fa-edit"></i>
                                     </a>
@@ -32,45 +36,70 @@
                         <div class="panel-body">
                             {% for photo in album.photos %}
                                     <a href="{{ path('ag_album_show', { 'id': album.id }) }}" class="album_thumbnail">
-                                        <img class="img-responsive img-shadow" src="{{ asset(photo.webpath) }}"
+                                        <img class="img-responsive img-shadow img-center" src="{{ photo.webpath | imagine_filter('my_thumbnail') }}"
                                              alt="" data-index="{{ loop.index }}"/>
                                     </a>
                             {% else %}
                                 Aucune photo dans cet album
                             {% endfor %}
                             <hr/>
-                            {% if album.description is not null %}
-                                {{ album.description }}
-                            {% else %}
-                                <p>Aucune description</p>
-                            {% endif %}
+                            {{ album.description is null ? "<p>Aucune description</p>" : album.description }}
                             <div class="clearfix"></div>
-                            <div class="pull-right">
-                                <small><em>{{ album.createdAt|date('d M Y \à H:i:s') }}</em></small>
+                            <div class="margin20 pull-right small em">
+                                crée le {{ album.createdAt|date('d') ~ ' ' ~ album.createdAt|date('M')|trans({}, 'months') ~ ' ' ~ album.createdAt|date('Y \à H:i:s') }}
                             </div>
                         </div>
                     </div>
                 </div>
+                {% if loop.index is divisible by(3) %}
+                    <div class="clearfix visible-md visible-lg"></div>
+                {% elseif loop.index is divisible by(2) %}
+                    <div class="clearfix visible-sm"></div>
+                {% endif %}
             {% else %}
                 <div class="col-xs-12 text-center">
                     Aucun album pour le moment.
                 </div>
-                {% endfor %}
+            {% endfor %}
             </div>
         </div>
     </div>
+    {% if nbPages > 1 %}
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <nav>
+                <ul class="pagination pagination-sm">
+                    <li{% if page <= 1 %} class="disabled"{% endif %}>
+                        <a href="{{ path('ag_lasvegasbundle_home', { page: page-1 }) }}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    {% for p in range(1, nbPages) %}
+                        <li{% if page == p %} class="active"{% endif %}>
+                            <a href="{{ path('ag_lasvegasbundle_home', { page: p }) }}">
+                                {{ p }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                    <li{% if page >= nbPages %} class="disabled"{% endif %}>
+                        <a href="{{ path('ag_lasvegasbundle_home', { page: page+1 }) }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
 
 {% block javascripts %}
     <script type="text/javascript">
         $(function() {
-            $('.album_thumbnail').hover(function() {
-                var _a = $(this);
-                var _img = _a.children('img').first();
-
-                _img.css({
-                    'background-color' : 'rgba(0,0,0,0.5)'
-                });
+            $('.album_thumbnail .panel').hover(function() {
+                $(this).find('.album_monitoring').show();
+            }, function() {
+                $(this).find('.album_monitoring').hide();
             });
         });
     </script>
