--- a/src/AG/LasVegasBundle/Resources/views/Album/upload.html.twig
+++ b/src/AG/LasVegasBundle/Resources/views/Album/upload.html.twig
@@ -3,31 +3,70 @@
 {% block lasvegasbundle_body %}
     <div class="row">
         <div class="col-xs-12 text-center">
-            <h1>{{ album.name }} <small>upload de photo</small></h1>
+            <h1><a href="{{ path('ag_album_show', { 'id': album.id }) }}"><em>{{ album.name }}</em></a> <small>upload de photos</small></h1>
         </div>
     </div>
     <hr/>
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-12">
-            {{ form_start(form) }}
-            {{ form_errors(form) }}
-            <div class="form-group">
-                {{ form_label(form.name) }}
-                {{ form_widget(form.name, { 'attr': { 'class' : 'form-control' }}) }}
+            <div class="row">
+                <div class="col-xs-12">
+                    <label class="btn btn-success" for="{{ form.file.vars.id }}">
+                        <i class="fa fa-upload"></i>
+                        Ajouter des photos'zer
+                    </label>
+                </div>
             </div>
-            <div class="form-group">
-                {{ form_label(form.comment) }}
-                {{ form_widget(form.comment, { 'attr': { 'class': 'form-control' }}) }}
+            <div class="row">
+                <div id="upload-manager"
+                     data-file-input-id="{{ form.file.vars.id }}"
+                     data-file-input-name="{{ form.file.vars.full_name }}"
+                     data-name-input-name="{{ form.name.vars.full_name }}"
+                     data-size-input-name="{{ form.size.vars.full_name }}"
+                     data-taken-input-name="{{ form.takenAt.vars.full_name }}"
+                     data-comment-input-name="{{ form.comment.vars.full_name }}"
+                     data-token-input-name="{{ form._token.vars.full_name }}"
+                     data-token-input-value="{{ form._token.vars.value }}">
+                    <div class="template">
+                        <div class="col-md-3 col-sm-4">
+                            <div class="photo" id="__id__">
+                                <i class="icon fa fa-file-image-o" title="__name__"></i>
+                                <div class="name" title="__name__">__name__</div>
+                                <div class="size">__size__</div>
+                                <div class="status">En attente</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                                         aria-valuemax="100" style="width: 0;">
+                                        0%
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form">
+                        {{ form_widget(form.file) }}
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <h2>{{ nbPhotos }} dernières photos ajoutées</h2>
+                </div>
+                {% for photo in listPhotos %}
+                    <div class="col-md-3 col-sm-4 photo_thumbnail">
+                        {% include 'AGLasVegasBundle:Photo:template.html.twig' %}
+                    </div>
+                {% if loop.index is divisible by(4) %}
+                    <div class="clearfix visible-md visible-lg"></div>
+                {% elseif loop.index is divisible by(3) %}
+                    <div class="clearfix visible-sm"></div>
+                {% endif %}
+                {% else %}
+                    Vous n'avez ajouté aucune photo à cet album.
+                {% endfor %}
             </div>
-            <div class="form-group">
-                {{ form_label(form.file) }}
-                {{ form_widget(form.file) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.save) }}
-                {{ form_widget(form.save, { 'attr': { 'class': 'btn btn-primary' }}) }}
-            </div>
-            {{ form_rest(form) }}
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript" src="{{ asset('js/upload.js') }}"></script>
 {% endblock %}
