--- a/src/AG/LasVegasBundle/Resources/views/Photo/form.html.twig
+++ b/src/AG/LasVegasBundle/Resources/views/Photo/form.html.twig
@@ -1,28 +1,31 @@
-{{ form_start(form) }}
+{#{{ form_start(form) }}#}
 
-{{ form_errors(form) }}
+{#{{ form_errors(form) }}#}
 
-<div class="form-group">
-    {{ form_label(form.name) }}
-    {{ form_widget(form.name, { 'attr': { 'class': 'form-control '}}) }}
-</div>
+{#<div class="form-group">#}
+    {#{{ form_label(form.name) }}#}
+    {#{{ form_widget(form.name, { 'attr': { 'class': 'form-control '}}) }}#}
+{#</div>#}
 
-<div class="form-group">
-    {{ form_label(form.comment) }}
-    {{ form_widget(form.comment, { 'attr': { 'class': 'form-control '}}) }}
-</div>
+{#<div class="form-group">#}
+    {#{{ form_label(form.comment) }}#}
+    {#{{ form_widget(form.comment, { 'attr': { 'class': 'form-control '}}) }}#}
+{#</div>#}
 
-{% if form.file is defined %}
+{#{% if form.file is defined %}#}
 
-    <div class="form-group">
-        {{ form_label(form.file) }}
-        {{ form_widget(form.file, { 'attr': { 'class': 'form-control '}}) }}
-    </div>
+    {#<div class="form-group">#}
+        {#{{ form_label(form.file) }}#}
+        {#{{ form_widget(form.file, { 'attr': { 'class': 'form-control '}}) }}#}
+    {#</div>#}
 
-{% endif %}
+{#{% endif %}#}
 
-<div class="form-group">
-    {{ form_widget(form.save, { 'attr': { 'class': 'btn btn-success' }}) }}
-</div>
+{#<div class="form-group">#}
+    {#{{ form_widget(form.save, { 'attr': { 'class': 'btn btn-success' }}) }}#}
+{#</div>#}
 
-{{ form_rest(form) }}
+{#{{ form_rest(form) }}#}
+
+{% form_theme form 'bootstrap_3_layout.html.twig' %}
+{{ form(form) }}
