--- a/src/AG/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/AG/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,19 +1,17 @@
 {% extends "AGUserBundle::base.html.twig" %}
 
-{% block return %}
-    <div class="row">
-        <div class="col-xs-1 col-lg-offset-3 col-md-offset-2 col-sm-offset-1">
-            <a href="{{ path('fos_user_profile_show') }}"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-        </div>
-    </div>
+{% block h1_title %}
+    <a class="pull-left" href="{{ path('fos_user_profile_show') }}"><i class="fa fa-arrow-left"></i></a>
+    <i class="fa fa-lock"></i> Changer mot de passe
 {% endblock %}
-
-{% block h1_title %}<span class="glyphicon glyphicon-lock"></span> Changer mot de passe{% endblock %}
 
 {% block user_bundle_content  %}
     {% trans_default_domain 'FOSUserBundle' %}
     <div class="row">
+        <hr/>
         <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+            {#{% form_theme form 'bootstrap_3_layout.html.twig' %}#}
+            {#{{ form(form) }}#}
             <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
                 <div class="form-group">
                     {{ form_label(form.current_password, "Mot de passe actuel") }} :
@@ -21,7 +19,7 @@
                     {{ form_widget(form.current_password, {'attr' : {'class': 'form-control'}}) }}
                 </div>
                 <div class="form-group">
-                    {{ form_label(form.plainPassword.first, "Nouveau mot de pass") }} :
+                    {{ form_label(form.plainPassword.first, "Nouveau mot de passe") }} :
                     {{ form_errors(form.plainPassword.first) }}
                     {{ form_widget(form.plainPassword.first, {'attr' : {'class': 'form-control'}}) }}
                 </div>
