--- a/src/AG/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/AG/UserBundle/Resources/views/Security/login.html.twig
@@ -6,6 +6,12 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 text-center">
                 <h1><img class="img-responsive img-thumbnail" src="{{ asset('img/las-vegas-night.jpg') }}" alt="Las Vegas"/></h1>
+
+                {% if error %}
+                    <div class="alert alert-danger">
+                        {{ error.message|trans({}, 'messages') }}
+                    </div>
+                {% endif %}
         </div>
     </div>
     <div class="row">
@@ -26,12 +32,8 @@
                         <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>{{ 'security.login.remember_me'|trans }}
                     </label>
                 </div>
-                {% if error %}
-                    <div class="alert alert-danger">
-                        {{ error.messageKey|trans(error.messageData, 'security') }}
-                    </div>
-                {% endif %}
-                <input type="submit" class="btn btn-default pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                {#<a class="btn btn-default" href="{{ path('fos_user_resetting_request') }}">Mot de passe oublié</a>#}
+                <input type="submit" class="btn btn-info pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
             </form>
         </div>
     </div>
